--- a/biografia/css/estilos.css
+++ b/biografia/css/estilos.css
@@ -9,14 +9,10 @@
 /* DISEÑO */
 
 body {
-background-image: url("../../imagenes/background.jpg");
+background-image: url("../../imagenes/backgroundmobile.png");
 background-color: #cccccc;
 background-attachment: fixed;
 background-size: 100%;
-}
-
-.sidebarleft {
-
 }
 
 .sidebarleft img {
@@ -25,9 +21,10 @@ width: 100px;
 background-color: #cccccc;
 }
 
+
 .menu a {
 color: rgba(255, 255, 255, 0.089);
-font-size: 11px;
+font-size: 18px;
 font-family: 'Poppins', sans-serif;
 text-transform: uppercase;
 }
@@ -38,32 +35,67 @@ background: #ffe4e1;
 }
 
 .biografia {
-
+    -webkit-box-shadow: inset 0x 0px 100px 800px rgba(0, 0, 0, 0.527);
+    -moz-box-shadow: inset 0px 0px 100px 800px rgba(0,0,0,0.527);
+    box-shadow: inset 0px 0px 100px 800px rgba(0,0,0,0.527);
 }
 
-
+.biografia img {
+    width: 100%
+}
 
 .biografia h1 {
-border-bottom: solid 1px;
-color: #AFB4B7;
-font-size; 18px;
-text-transform: uppercase;
-font-family: 'Poppins', sans-serif;
+    border-bottom: solid 1px;
+    color: #AFB4B7;
+    font-size: 25px;
+    text-transform: uppercase;
+    font-family: 'Poppins', sans-serif;
 }
 
 .biografia p {
-font-family: 'Sailec', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-font-size: 14px;
-text-align: left;
-color: #fff;
-}
-
-.pie {
-
+    font-family: 'Sailec', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    text-align: left;
+    color: #fff;
 }
 
 .pie p {
-font-family: 'Sailec', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-font-size: 12px;
-text-align: center;
+    font-family: 'Sailec', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 10px;
+    text-align: center;
+    -webkit-box-shadow: inset 0x 0px 100px 800px rgba(0, 0, 0, 0.527);
+    -moz-box-shadow: inset 0px 0px 100px 800px rgba(0,0,0,0.527);
+    box-shadow: inset 0px 0px 100px 800px rgba(0,0,0,0.527)
+}
+
+/* POSICIONAMIENTO MOBLIE FIRST */
+
+.sidebarleft img{
+    visibility: hidden;
+}
+
+.sidebarleft li {
+    display: inline-block;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.biografia {
+    padding-bottom: 0px;
+}
+
+.biografia img {
+    padding: 15px 20px;
+}
+
+.biografia h1 {
+    padding: 5px 20px 5px 15px;
+}
+
+.biografia p {
+    display: inline-block;
+    width: 90%;
+    padding: 10px 0px;
+    margin: 5px 25px;
+    line-height: 17px;
 }
