--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,15 +8,13 @@
 
 /* DISEÑO */
 
+
 body {
-    background-image: url("../imagenes/background.jpg");
+    background-image: url("../imagenes/backgroundmobile.png");
     background-color: #cccccc;
     background-attachment: fixed;
     background-size: 100%;
-}
-
-.sidebarleft {
-
+    background-repeat: no-repeat;
 }
 
 .sidebarleft img {
@@ -25,9 +23,10 @@ body {
     background-color: #cccccc;
 }
 
+
 .menu a {
     color: rgba(255, 255, 255, 0.089);
-    font-size: 11px;
+    font-size: 18px;
     font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
 }
@@ -38,15 +37,19 @@ body {
 }
 
 .news {
-
+    -webkit-box-shadow: inset 0x 0px 100px 800px rgba(0, 0, 0, 0.527);
+    -moz-box-shadow: inset 0px 0px 100px 800px rgba(0,0,0,0.527);
+    box-shadow: inset 0px 0px 100px 800px rgba(0,0,0,0.527);
 }
 
-
+.news img {
+    width: 100%;
+}
 
 .news h1 {
     border-bottom: solid 1px;
     color: rgba(255, 255, 255, 0.2);
-    font-size; 18px;
+    font-size: 25px;
     text-transform: uppercase;
     font-family: 'Poppins', sans-serif;
 }
@@ -55,9 +58,15 @@ body {
     color: #AFB4B7;
 }
 
-.news h2 a {
+.news li {
+    -webkit-box-shadow: inset 0px 3px 0px 187px rgba(0,0,0,0.20);
+    -moz-box-shadow: inset 0px 3px 0px 187px rgba(0,0,0,0.20);
+    box-shadow: inset 0px 3px 0px 187px rgba(0,0,0,0.20);
+}
+
+.news li h2 a {
     font-family: 'Sailec', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     color: #fff;
 }
 
@@ -65,19 +74,60 @@ body {
     text-decoration: underline;
 }
 
-.news p {
+.news li p {
     font-family: 'Sailec', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 14px;
+    font-size: 12px;
     text-align: left;
     color: #fff;
 }
 
-.pie {
-
-}
-
 .pie p {
     font-family: 'Sailec', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 12px;
+    font-size: 10px;
     text-align: center;
+    -webkit-box-shadow: inset 0x 0px 100px 800px rgba(0, 0, 0, 0.527);
+    -moz-box-shadow: inset 0px 0px 100px 800px rgba(0,0,0,0.527);
+    box-shadow: inset 0px 0px 100px 800px rgba(0,0,0,0.527)
 }
+
+
+/* POSICIONAMIENTO MOBILE FIRST */
+.sidebarleft img{
+    visibility: hidden;
+}
+
+.sidebarleft li {
+    display: inline-block;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.news {
+    padding-bottom: 0px;
+}
+
+.news img {
+    padding: 15px 20px;
+}
+
+.news h1 {
+    padding: 5px 20px 0px 15px;
+}
+
+.news li {
+    display: inline-block;
+    width: 45%;
+    padding: 12px;
+    margin: 20px 9px;
+    border-width: 1px;
+    border-color: #AFB4B7;
+    border-style: solid;
+    border-radius: 10px;
+    vertical-align: top;
+    line-height: 15px;
+}
+
+.news li p {
+    padding-top: 10px;
+}
+
